[gd_scene load_steps=5 format=3 uid="uid://dqbb0erv5gedt"]

[ext_resource type="Script" path="res://entities/abilities/panzer/panzer_attack_component.gd" id="1_x61bb"]
[ext_resource type="PackedScene" uid="uid://uh2jkp1y03h" path="res://projectiles/bullet/bullet.tscn" id="2_jassv"]
[ext_resource type="Texture2D" uid="uid://onsvxw17odwc" path="res://assets/panzer/panzer.png" id="3_8vr08"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ypaq"]
radius = 72.0

[node name="PanzerAttackComponent" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("1_x61bb")
bullet_projectile = ExtResource("2_jassv")
bullet_collision_layer = 4
bullet_collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4ypaq")
debug_color = Color(0.701961, 0, 0, 0)

[node name="TurretSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -1)
texture = ExtResource("3_8vr08")
hframes = 3
frame = 2

[node name="MuzzleMarker" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="ReloadTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_entity_entered"]
[connection signal="body_exited" from="." to="." method="_on_entity_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
